# eeg

./: .gitignore  README.md  desktop.ini  pyproject.toml
.claude/: settings.local.json
data/processed/: synthetic_150windows.csv
data/raw/: sample.csv  sample_30s.csv
eeg_platform/: __init__.py  cli.py
eeg_platform/analysis/: __init__.py  impact.py
eeg_platform/export/: __init__.py  save.py
eeg_platform/features/: __init__.py  spectral.py  time_domain.py
eeg_platform/io/: __init__.py  load_csv.py  validation.py
eeg_platform/ml/: __init__.py  artifact_labels.py  benchmark.py  eval_artifact.py  featureset.py  improvement.py  predict_artifact.py  train_artifact.py
eeg_platform/preprocess/: __init__.py  clean.py  filters.py  windowing.py
eeg_platform/streaming/: __init__.py  boards.py  client.py  recorder.py
eeg_platform/viz/: __init__.py  plots.py
recordings/: recording_20260222_231315.csv  recording_20260222_231315.json
tests/: test_filters.py  test_impact.py  test_ml.py  test_spectral.py  test_streaming.py  test_time_domain.py
